# take-control-of-your-style

./: .gitignore  README.md  environment.yml  environment_dummy.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: format.yml  lint.yml  pytest.yml
docs/: cyclegan_gatys_comparison.md  design_proposal.md
notebooks/: .gitignore  cycle_gan_regularization.ipynb  cycle_gan_regularization_experiment.ipynb  cyclegan_pl.ipynb  feature_extractors_experiment.ipynb  neural_style_example.ipynb  neural_style_tutorial.ipynb  neural_style_tutorial2.ipynb  neural_style_tutorial_pl.ipynb  test_semantic_regularization.ipynb
scripts/: cyclegan_gatys_comparison.py  cyclegan_gatys_comparison.sh  fetch_kaggle_dataset.py  fetch_models.py  inference_cyclegan.py  train_cyclegan.py  train_gatys.py
zprp/: cycleGAN.py
zprp/models/: gatys_nst.py
zprp/models/cycle_gan/: components.py  data.py  densenet.py  model.py  unet.py
zprp/models/gatys/: data.py  extractor.py  model.py
zprp/training/: cyclegan.py  gatys.py
